# cdcore

./: .gitignore  AGENTS.md  LICENSE  LICENSE-UPSTREAM  README.md  THIRD_PARTY_LICENSES.md  _PLAN.md  build.cmd  build.sh
.github/workflows/: release.yml
cdcore/: .gitignore  Cargo.toml  THIRD_PARTY_LICENSES.md  build.sh  pyproject.toml
cdcore/examples/: pac_roundtrip.rs
cdcore/python/cdcore/: __init__.py  __init__.pyi  crimsonforge.py
cdcore/src/: lib.rs  python.rs
cdcore/src/archive/: mod.rs  pamt.rs  papgt.rs  paz.rs  user_group.rs
cdcore/src/compression/: lz4.rs  mod.rs  zlib.rs
cdcore/src/crypto/: chacha20.rs  checksum.rs  mod.rs
cdcore/src/ffi/: mod.rs
cdcore/src/formats/: dds.rs  mod.rs
cdcore/src/formats/animation/: paa.rs  paa_metabin.rs  pab.rs
cdcore/src/formats/audio/: mod.rs  ogg.rs  wem.rs
cdcore/src/formats/data/: binarygimmick.rs  mod.rs  pabgb.rs  paloc.rs
cdcore/src/formats/image/: dds.rs
cdcore/src/formats/mesh/: fbx.rs  mod.rs  pabc.rs  pabc_skin.rs  pac.rs  pam.rs  pamlod.rs
cdcore/src/formats/physics/: hkx.rs  nav.rs
cdcore/src/repack/: baseline.rs  engine.rs  mod.rs
cdcore/src/repack/mesh/: cfmeta.rs  donor.rs  fbx_import.rs  layout.rs  mod.rs  obj_import.rs  pac_builder.rs  pam_builder.rs  pam_local.rs  pamlod_builder.rs  quant.rs  skeleton_math.rs  spatial_hash.rs
cdcore/src/vfs/: manager.rs  mod.rs
cdcore/tests/: mesh_samples.rs
cdfuse/: .gitignore  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  build.rs  demo.sh
cdfuse/src/: config.rs  fs.rs  fs_win.rs  main.rs  prefab_view.rs  setup.rs  tui.rs  virtual_files.rs
cdml/: .gitignore  Cargo.toml  README.md
cdml/src/: error.rs  index.rs  lib.rs  model.rs  preprocess.rs  search.rs
cdthumb/: Cargo.toml
cdthumb/src/: main.rs
cdwinfs/: .gitignore  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  build.rs  manifest.xml
cdwinfs/.assets/: nexus_description.bbcode
cdwinfs/src/: config.rs  fs.rs  main.rs  setup.rs  tui.rs  virtual_files.rs
crimsonforge_core/: Cargo.toml  build.sh  pyproject.toml
crimsonforge_core/python/crimsonforge_core/: __init__.py
crimsonforge_core/src/: error.rs  lib.rs  python.rs
crimsonforge_core/src/archive/: mod.rs  pamt.rs
crimsonforge_core/src/compression/: mod.rs
crimsonforge_core/src/crypto/: chacha20.rs  checksum.rs
crimsonforge_core/src/formats/: dds.rs  mod.rs
crimsonforge_core/src/formats/animation/: mod.rs  paa.rs  pab.rs
crimsonforge_core/src/formats/physics/: hkx.rs  mod.rs  nav.rs
crimsonforge_core/src/formats/scene/: mod.rs  prefab.rs
crimsonforge_core/src/repack/: engine.rs  mod.rs
crimsonforge_core/src/vfs/: manager.rs
ddsthumb/: .gitignore  Cargo.toml
ddsthumb/src/: main.rs
scripts/mesh_search/: README.md  build_corpus.py  requirements.txt  viz.py
scripts/mesh_search/lib/: mesh_pipeline.py  raster.py  sidecar.py
tools/: generate_licenses.py
wemcodec/: .gitignore  Cargo.toml
wemcodec/src/: forward.rs  lib.rs  ogg_comment.rs  replace.rs  wem.rs
wemcodec/src/reverse/: codebook_lookup.rs  mod.rs  setup_strip.rs
wmmogg/: Cargo.toml
wmmogg/src/: error.rs  ogg_comment.rs
wmmogg/src/reverse/: bit_io.rs  mod.rs  packet_strip.rs  riff_build.rs
wmmogg/tests/: roundtrip.rs
