[package]
name = "cdcore"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "cdcore"
crate-type = ["cdylib", "rlib"]

[dependencies]
chacha20 = "0.9"                                          # ChaCha20 stream cipher for archive decryption
lz4_flex = "0.13"                                         # LZ4 block compression used by PAZ entries
flate2 = { version = "1.0", features = ["zlib"] }         # zlib fallback decompression
half = "2.4"                                              # f16 UV coordinates in mesh vertices
dashmap = "6"                                             # concurrent HashMap for VFS PAMT cache
rayon = "1"                                               # parallel PAMT group loading
thiserror = "2"                                           # ParseError derive
sha1 = "0.11"                                             # PAC mesh baseline snapshots
hex = "0.4"                                               # SHA-1 hex encoding for baseline filenames
log = "0.4"                                               # logging facade (audio module)
serde = { version = "1", features = ["derive"] }          # cfmeta sidecar JSON deser (mesh import)
serde_json = "1"                                          # cfmeta sidecar parser
byteorder = "1.5"                                         # WEM RIFF multi-byte field encoding
ww2ogg = "0.1"                                            # WEM->OGG forward conversion
sha2 = "0.11"                                             # codebook hash LUT for setup stripping
pyo3          = { version = "0.28", optional = true }
pyo3-stub-gen = { version = "0.22", optional = true }

[[bin]]
name = "stub_gen"
required-features = ["python"]

[features]
# Enable Python bindings (required to build the maturin wheel).
# extension-module tells pyo3 not to link libpython (correct for cdylib).
python = ["pyo3", "pyo3-stub-gen"]
extension-module = ["pyo3/extension-module"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
