[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cdcore"
version = "0.1.0"
description = "High-performance Rust core for CrimsonForge — VFS, parsers, crypto, repack"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "cdcore"
python-source = "python"
features = ["extension-module"]
