[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cdcore"
version = "0.1.0"
description = "Rust core library for CrimsonForge: VFS, parsers, crypto, repack"
requires-python = ">=3.10"
license = { file = "../LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "cdcore"
python-source = "python"
features = ["extension-module"]
