[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "crimsonforge_core"
version = "0.1.0"
description = "High-performance Rust core for CrimsonForge — VFS, parsers, crypto, repack"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "crimsonforge_core"
python-source = "python"
features = ["extension-module"]
