[package]
name = "ddsthumb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ddsthumb"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[dependencies]
crimsonforge_core = { path = "../crimsonforge_core", default-features = false }
clap    = { version = "4", features = ["derive"] }
rayon   = "1"
png     = "0.17"
walkdir = "2"
