[package]
name = "ddsthumb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ddsthumb"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[dependencies]
cdcore = { path = "../cdcore", default-features = false }
clap    = { version = "4", features = ["derive"] }
png     = "0.17"
walkdir = "2"
